# wuwa-gacha-assistant

./: .gitignore  LICENSE  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
.docs/: DESIGN.md  基于 uv 的 Python 开发工作流.md  开发工作流.md  通过云鸣潮获取请求参数.md  鸣潮卡池时间.md  鸣潮卡池规则.md
scripts/: sync-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gacha.rs  lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/analysis/: page.tsx
src/app/import/: page.tsx
src/components/: theme-provider.tsx  theme-toggle.tsx
src/components/analysis/: FiveStarTable.tsx  PityChart.tsx  PoolStats.tsx  PoolTabs.tsx
src/components/import/: PlayerForm.tsx  PoolSelector.tsx
src/components/layout/: ClientLayout.tsx  Sidebar.tsx  SyncStatus.tsx  TitleBar.tsx
src/components/overview/: OwnedList.tsx  StatCard.tsx
src/hooks/: useGachaInit.ts  useUserParams.ts
src/lib/: api.ts  config.ts  constants.ts  db.ts  gacha-analysis.ts  params.ts  tauri.ts  types.ts
src/store/: gacha-store.ts  user-store.ts
