[package]
name = "wuwa-gacha-assistant"
version = "0.2.0"
description = "A Wuthering Waves gacha analysis desktop app"
authors = ["QING"]
edition = "2021"

[lib]
name = "wuwa_gacha_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
